# mangafox-library-exporter

./: LICENSE  README.md  build_windows.ps1  mangadex-scrapper.spec  pyproject.toml  requirements.txt
.github/: app.py  copilot-instructions.md
src/backup/: csv_export.py
src/database/: db.py
src/mangadex_scrapper/: gui.py  scraper.py
src/mangafox-scraper/: README.md  requirements.txt
src/mangafox-scraper/src/: downloader.py  main.py  scraper.py  utils.py
src/mangafox-scraper/tests/: test_downloader.py  test_scraper.py
src/sync/: sync_engine.py
src/ui/: login.py  main.py
tests/: test_login.py  test_main.py  test_scraper.py
