[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mangadex-scrapper"
version = "0.1.0"
description = "Async Mangadex scraper utilities and CLI"
authors = ["<your name> <you@example.com>"]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pylint"]

[tool.pylint]
enable = ["all"]
